[gd_scene load_steps=3 format=3 uid="uid://cou7jpt60t6ff"]

[ext_resource type="Script" path="res://src/GUI/InfoPanels/info_panel.gd" id="1_ju8qh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f27wa"]
bg_color = Color(0, 0, 0, 1)

[node name="InfoPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ju8qh")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f27wa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoContainerHolder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3
